--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/maozedong/amqp-kt#readme",
   "dependencies": {
     "amqplib": "^0.5.1",
-    "dotenv-safe": "^4.0.3"
+    "dotenv-safe": "^4.0.3",
+    "vorpal": "^1.11.4"
   },
   "devDependencies": {
     "eslint": "3.12.2",
